[gd_scene load_steps=9 format=3 uid="uid://cjmrd4vjlw8n"]

[ext_resource type="StyleBox" uid="uid://d3jw442hvmgiy" path="res://Styleboxs/Button/SimpleBlack_Button_Hover.tres" id="1_en0pt"]
[ext_resource type="Script" path="res://Scripts/Mods_Top_Controller.gd" id="1_yvjjh"]
[ext_resource type="StyleBox" uid="uid://b0ha7ovj1t4wq" path="res://Styleboxs/Button/SimpleBlack_Button_Pressed.tres" id="2_iahfq"]
[ext_resource type="StyleBox" uid="uid://bm1cn6c3xs130" path="res://Styleboxs/Button/SimpleBlack_Button.tres" id="3_nlwog"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ti0du"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
corner_detail = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2c7ca"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1ifnn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j44l6"]

[node name="Main_Panel" type="Panel"]
clip_contents = true
custom_minimum_size = Vector2(555, 96)
offset_right = 555.0
offset_bottom = 96.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ti0du")
script = ExtResource("1_yvjjh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LBL_Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Mods controller"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BTN_APPLY" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_2c7ca")
theme_override_styles/hover = ExtResource("1_en0pt")
theme_override_styles/pressed = ExtResource("2_iahfq")
theme_override_styles/normal = ExtResource("3_nlwog")
text = "Apply all"

[node name="BTN_UNAPPLY" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_1ifnn")
theme_override_styles/hover = ExtResource("1_en0pt")
theme_override_styles/pressed = ExtResource("2_iahfq")
theme_override_styles/normal = ExtResource("3_nlwog")
text = "Unapply all"

[node name="BTN_PRESET" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_j44l6")
theme_override_styles/hover = ExtResource("1_en0pt")
theme_override_styles/pressed = ExtResource("2_iahfq")
theme_override_styles/normal = ExtResource("3_nlwog")
text = "Preset"

[node name="BTN_REFRESH" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
theme_override_styles/focus = SubResource("StyleBoxEmpty_j44l6")
theme_override_styles/hover = ExtResource("1_en0pt")
theme_override_styles/pressed = ExtResource("2_iahfq")
theme_override_styles/normal = ExtResource("3_nlwog")
text = "Refresh"

[node name="LBL_NUM" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Number of mods : 00"
horizontal_alignment = 1

[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/BTN_APPLY" to="." method="BTN_APPLY_ALL_PRESSED"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/BTN_UNAPPLY" to="." method="BTN_UNAPPLY_PRESSED"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/BTN_PRESET" to="." method="BTN_PRESET_PRESSED"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/BTN_REFRESH" to="." method="BTN_REFRESH_PRESSED"]
